err/hanzo-warc-tools.err
Listing '.'...
Listing './bin'...
Compiling './bin/arc2warc.py'...
Compiling './bin/warc2warc.py'...
Compiling './bin/warcdump.py'...
***   File "./bin/warcdump.py", line 42
    print "archive record at %s:%s"%(name,offset)
                                  ^
SyntaxError: invalid syntax

Compiling './bin/warcextract.py'...
***   File "./bin/warcextract.py", line 54
    print '\t', e
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/warcfilter.py'...
Compiling './bin/warcindex.py'...
***   File "./bin/warcindex.py", line 31
    print '#WARC filename offset warc-type warc-subject-uri warc-record-id content-type content-length'
                                                                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/warcvalid.py'...
***   File "./bin/warcvalid.py", line 50
    except StandardError, e:
                        ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/hanzo'...
Listing './lib/python3.5/site-packages/hanzo/httptools'...
Compiling './lib/python3.5/site-packages/hanzo/httptools/proxy.py'...
***   File "./lib/python3.5/site-packages/hanzo/httptools/proxy.py", line 17
    # close or re-use connection
                               ^
SyntaxError: unexpected EOF while parsing

Listing './lib/python3.5/site-packages/hanzo/warctools'...
Compiling './lib/python3.5/site-packages/hanzo/warctools/record.py'...
***   File "./lib/python3.5/site-packages/hanzo/warctools/record.py", line 69
    print 'Headers:'
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/hanzo_warc_tools-0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
